update(job-service) : add applicantInfo to ApplicationResponse